--- a/css/style.css
+++ b/css/style.css
@@ -15,17 +15,9 @@ html{
 	background-color: #333;
 	height: 50px;
 	width: 100%;
+	justify-content: space-between;
 }
 
-.title {
-	display: flex;
-	align-items: center;
-}
-
-.title h3{
-	color: rgb(219, 218, 218);
-	font-size: 23px;
-}
 
 .icon{
 	height: 35px;
@@ -157,7 +149,7 @@ html{
 }
 
 .active-angle{
-    background-color: #1d1d1d !important;
-    color: #FFF !important;
+    background-color: #fff !important;
+    color: #222 !important;
     border-radius: 10px !important;
 }
